--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,6 @@
       <load src="./partials/projects.html" />
       <load src="./partials/contact.html" />
     </main>
-
     <load src="./partials/footer.html" />
 
     <script type="module" src="./main.js"></script>
@@ -38,6 +37,8 @@
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="./js/contact.js"></script>
+    <script type="module" src="./js/footer.js"></script>
   </body>
 </html>
